<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2013-2018 Shaleen Jain <shaleen.jain95@gmail.com>
  ~
  ~ This file is part of College Academics.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_url" translatable="false">http://www.github.com/shalzz/college-academics</string>
    <string name="copyright_year" translatable="false">Copyright © 2013&#8211;2018</string>
    <string name="app_copyright" translatable="false">Shaleen Jain &#60;shaleen.jain95@gmail.com&#62;</string>

    <!--API keys-->
    <string name="bugsnag_api" translatable="false">600a00bfd5bd72e5df7f288f74df8f9b</string>
    <string name="onedu_gcmSenderId" translatable="false">3087313396</string>

    <!--Preference Keys-->
    <string name="pref_key_sync">data_sync</string>
    <string name="pref_key_sync_interval">data_sync_interval</string>
    <string name="pref_key_info_notices">pref_info_notices</string>
    <string name="pref_key_info_version">pref_info_version</string>
    <string name="pref_key_use_proxy">pref_key_use_proxy</string>
    <string name="pref_key_proxy_username">pref_key_proxy_username</string>
    <string name="pref_key_proxy_password">pref_key_proxy_password</string>
    <string name="pref_key_ga_opt_in">ga_opt_in</string>
    <string name="pref_key_hide_weekends">hide_weekends</string>
    <string name="pref_key_day_night">day_night</string>
    <string name="pref_key_pro_mode">pro_mode</string>
    <string name="pref_key_twitter">key_twitter</string>
    <string name="pref_key_play_dev_page">key_dev_page</string>
    <string name="pref_key_play_rating">key_play_rating</string>

    <!--////  Actual user visible text ////-->

    <!--User friendly error messages-->
    <string name="generic_server_down">It seems the web server is down or not responding. Please try again later.</string>
    <string name="no_internet">No Connection. Please try again when you are connected to the internet</string>
    <string name="generic_error">Network error occurred.</string>
    <string name="proxy_error">Proxy Authentication failed. Please check your credentials.</string>
    <string name="unexpected_error">An unexpected error occurred</string>
    <string name="form_userid_error">Username is required.</string>
    <string name="form_otp_error">Please enter a valid OTP.</string>
    <string name="form_password_error">Password is required.</string>
    <string name="auth_error">Username or password incorrect</string>
    <string name="forbidden_error">Unable to authorise your request. Please try to re-login or
        try again later.</string>
    <string name="no_data_title">Nothing Here</string>
    <string name="no_data_content">No data available on the server right now</string>
    <string name="timeout_error_title">Request timed out. Please try again.</string>
    <string name="no_connection_title">No connection.</string>
    <string name="no_connection_content">Please try again when you are connected to the internet</string>
    <string name="empty_view_try_again">Try Again</string>
    <string name="error_billing_unavailable">Billing unavailable. Make sure your Google Play app
        is setup correctly</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>

    <!--EditText's and TextView's-->
    <string name="no_classes">You don\'t have any classes on this day :)</string>
    <string name="swipe_info">To switch to any other day, either swipe across the screen or
        click the scroll to date in the top right corner.</string>
    <string name="day_list_marked_absent">Absent!</string>
    <string name="atten_list_footer_total">Total Attendance:</string>
    <string name="atten_list_days_absent_null">No absent days</string>
    <string name="atten_list_days_absent">"Days Absent: <xliff:g id="absent_dates">%s</xliff:g>"
    </string>
    <string name="atten_list_percentage"><xliff:g id="percentage">%.2f</xliff:g>%%</string>
    <string name="atten_list_attended_upon_held"><xliff:g id="attended">%1$d</xliff:g>/<xliff:g
        id="held">%2$d</xliff:g></string>
    <string name="login_notice">Please use a phone number registered with your University</string>
    <string name="college_academics_logo">College Academics</string>

    <!--Plurals-->
    <plurals name="tv_last_refresh">
        <item quantity="zero">Last refreshed few moments ago</item>
        <item quantity="one">Last refreshed <xliff:g id="time">%d</xliff:g> hour ago</item>
        <item quantity="other">Last refreshed <xliff:g id="time">%d</xliff:g> hours ago</item>
    </plurals>
    <plurals name="tv_classes_to_67">
        <!--escape the percentage sign by doubling it up-->
        <item quantity="one">Attend <xliff:g id="no_of_classes">%d</xliff:g> more class to reach 67%%</item>
        <item quantity="other">Attend <xliff:g id="no_of_classes">%d</xliff:g> more classes to reach 67%%</item>
    </plurals>
    <plurals name="tv_classes_to_75">
        <item quantity="one">Attend <xliff:g id="no_of_classes">%d</xliff:g> more class to reach 75%%</item>
        <item quantity="other">Attend <xliff:g id="no_of_classes">%d</xliff:g> more classes to reach 75%%</item>
    </plurals>
    <plurals name="tv_miss_classes">
        <item quantity="one">You can safely miss <xliff:g id="no_of_classes">%d</xliff:g> class</item>
        <item quantity="other">You can safely miss <xliff:g id="no_of_classes">%d</xliff:g> classes</item>
    </plurals>

    <!--Preferences-->
    <string name="pref_sync">Auto Refresh</string>
    <string name="pref_sync_summary">Periodically sync your attendance and timetable</string>
    <string name="pref_refresh">Refresh Interval</string>
    <string name="pref_notice">Open Source Licenses</string>
    <string name="pref_notice_summary">License details for open source softwares</string>
    <string name="pref_version">Build Version</string>
    <string name="pref_ga_opt_in">Usage Reports</string>
    <string name="pref_ga_opt_in_summary">Collect and send anonymous data to help improve the app</string>
    <string name="pref_hide_weekends">Hide Weekends (Pro feature)</string>
    <string name="pref_hide_weekends_summary">Show or Hide the weekends</string>
    <string name="pref_hide_weekends_summary_on">Display only weekdays</string>
    <string name="pref_day_night">Day/Night Theme (Pro feature)</string>
    <string name="pref_day_night_dialog">Select Night Mode</string>
    <string name="pref_day_night_summary">Choose a Day or Night Theme</string>
    <string name="pref_pro_mode">Help support app development</string>
    <string name="pref_show_pro_mode_off">Thanks for using College Academics. Consider upgrading
        to Pro Mode to support development and unlock additional features.</string>
    <string name="pref_show_pro_mode_on">Pro Mode is now unlocked with additional
        features available.</string>
    <string name="pref_dialog_title_donate">Donation Amount</string>


    <!--Showcase View-->
    <string name="sv_attendance_title">Expandable item</string>
    <string name="sv_attendance_content">Touch a Subject for more details about it</string>
    <string name="sv_timetable_title">Previous or next Day</string>
    <string name="sv_timetable_content">Swipe left or right to switch between days</string>
    <string name="sv_main_activity_title">Navigation bar</string>
    <string name="sv_main_activity_content">Press this button or swipe from the left edge to access the navigation bar</string>
    <string name="sv_login_activity_faq">Help and Support</string>
    <string name="sv_login_activity_faq_content">Go here to get help and view FAQ\'s</string>
    <string name="sv_login_activity_spinner">List of Colleges</string>
    <string name="sv_login_activity_spinner_content">Select your college from the list of
        supported colleges before logging in.</string>

    <!--EditText Hint's-->
    <string name="hint_userid">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_search">Search subjects</string>

    <!--Buttons-->
    <string name="login_button">Log In</string>

    <!--Accessibility-->
    <string name="drawer_open">Navigation drawer opened</string>
    <string name="drawer_close">Navigation drawer closed</string>

    <!--Options Menu-->
    <string name="menu_logout">Log Out</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help Center</string>
    <string name="menu_today">Scroll to today</string>
    <string name="menu_date">Scroll to date</string>
    <string name="navigation_item_1">Attendance</string>
    <string name="navigation_item_2">Timetable</string>
    <string name="navigation_item_3">Settings</string>
    <string name="navigation_item_4">Help and Support</string>
    <string name="proxy_settings_title">Proxy</string>
    <string name="about_settings_title">About</string>

    <!-- Permissions -->
    <string name="contacts_permission_discription">Contacts permission (GET_ACCOUNTS) is required to
        manage a sync account</string>
    <string name="network_error_message">Network Error</string>
    <string name="default_notification_channel_id">1</string>
    <string name="account_manager_title">College Academics</string>
    <string name="spinner_title">Select your College</string>
    <string name="hint_captcha">Enter captcha</string>
    <string name="refresh_captcha_button">refresh captcha button</string>
    <string name="captcha_image_view">Captcha Image</string>

</resources>
