<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013-2018 Shaleen Jain <shaleen.jain95@gmail.com>
  ~
  ~ This file is part of College Academics.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="Support" app:key="support" >
        <Preference
            app:key="@string/pref_key_twitter"
            app:icon="@drawable/ic_twitter_24dp"
            app:title="Twitter">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://twitter.com/shalzzj" />
        </Preference>
        <Preference
            app:key="@string/pref_key_play_dev_page"
            app:icon="@drawable/ic_google_play_24dp"
            app:title="My other apps">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/dev?id=6362297435335536825" />
        </Preference>
        <Preference
            app:key="@string/pref_key_play_rating"
            app:icon="@drawable/ic_star_24dp"
            app:title="Rate College Academics">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.shalzz.attendance" />
        </Preference>
        <SwitchPreferenceCompat
            app:key="@string/pref_key_pro_mode"
            app:defaultValue="false"
            app:icon="@drawable/ic_vpn_key_24px"
            app:title="@string/pref_pro_mode"
            app:summaryOn="@string/pref_show_pro_mode_on"
            app:summaryOff="@string/pref_show_pro_mode_off" />
    </PreferenceCategory>

    <PreferenceCategory app:title="General" app:key="general">
        <com.shalzz.attendance.wrapper.ProModeListPreference
            app:key="@string/pref_key_day_night"
            app:defaultValue="1"
            app:title="@string/pref_day_night"
            app:dialogTitle="@string/pref_day_night_dialog"
            app:summary="@string/pref_day_night_summary"
            app:entries="@array/pref_day_night_entries"
            app:entryValues="@array/pref_day_night_values"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="Timetable" app:key="timetable">
        <SwitchPreferenceCompat
            app:key="@string/pref_key_hide_weekends"
            app:defaultValue="false"
            app:title="@string/pref_hide_weekends"
            app:summary="@string/pref_hide_weekends_summary"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="Network" app:key="network">
        <SwitchPreferenceCompat
            app:key="@string/pref_key_sync"
            app:defaultValue="true"
            app:title="@string/pref_sync"
            app:summary="@string/pref_sync_summary" />

        <ListPreference
            app:key="@string/pref_key_sync_interval"
            app:defaultValue="480"
            app:title="@string/pref_refresh"
            app:dialogTitle="@string/pref_refresh"
            app:dependency="@string/pref_key_sync"
            app:entries="@array/pref_data_sync_interval_entries"
            app:entryValues="@array/pref_data_sync_interval_values"/>

        <SwitchPreferenceCompat
            app:key="@string/pref_key_ga_opt_in"
            app:defaultValue="true"
            app:title="@string/pref_ga_opt_in"
            app:summary="@string/pref_ga_opt_in_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="About" app:key="about">
        <Preference
            app:key="@string/pref_key_info_notices"
            app:title="@string/pref_notice"
            app:summary="@string/pref_notice_summary"
            app:persistent="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="@string/app_id"
                android:targetClass="com.google.android.gms.oss.licenses.OssLicensesMenuActivity" />
        </Preference>
        <Preference
            app:key="@string/pref_key_info_version"
            app:title="@string/pref_version"
            app:summary="@string/app_version"
            app:persistent="false"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>