<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013-2018 Shaleen Jain <shaleen.jain95@gmail.com>
  ~
  ~ This file is part of College Academics.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/attendanceListFragment"
            android:icon="@drawable/ic_stat_human"
            android:checked="true"
            android:title="@string/navigation_item_1"/>
        <item
            android:id="@+id/timeTablePagerFragment"
            android:icon="@drawable/ic_event_note_24"
            android:title="@string/navigation_item_2"/>
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/navigation_item_3"/>
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/helpNSupport"
                android:title="@string/navigation_item_4"/>
        </menu>
    </item>

</menu>