<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/emptyStateImageView"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_gravity="center_horizontal"
            tools:background="#000000"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/emptyStateTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="@string/no_data_title" />


        <TextView
            android:id="@+id/emptyStateContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingExtra="5.5dp"
            tools:text="@string/no_data_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/emptyStateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/primary"
            android:text="@string/empty_view_try_again"/>

    </LinearLayout>
</merge>