<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Shaleen Jain <shaleen.jain95@gmail.com>
  ~
  ~ This file is part of College Academics.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ivCapImg"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/captcha_image_view"
        android:scaleType="fitXY"
        tools:src="@drawable/alert"/>

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivCapImg"
        android:layout_toEndOf="@+id/ivCapImg"
        android:layout_above="@+id/captchaEditText"
        android:layout_centerVertical="true"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/refresh_black"
        android:contentDescription="@string/refresh_captcha_button" />

    <EditText
        android:id="@+id/captchaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivCapImg"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:autofillHints="none"
        android:gravity="center"
        android:hint="@string/hint_captcha"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:padding="10dp"
        android:singleLine="true" >
    </EditText>

</RelativeLayout>