<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013-2018 Shaleen Jain <shaleen.jain95@gmail.com>
  ~
  ~ This file is part of College Academics.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/IvAppname"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            app:fontFamily="Ruluko"
            android:layout_alignParentTop="true"
            android:layout_marginTop="54dp"
            android:text="@string/college_academics_logo"
            android:textAppearance="@style/college_aca_logo"
            android:lineSpacingExtra="-10sp"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spCollege"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="72dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:prompt="@string/spinner_title"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:backgroundTint="@color/white"
            android:popupTheme="@android:style/ThemeOverlay.Material.Light"
            android:spinnerMode="dialog"
            tools:text="@tools:sample/lorem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/IvAppname" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUserId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginTop="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spCollege">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:ellipsize="end"
                android:hint="@string/hint_userid"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLines="1">

                <requestFocus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="8dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUserId">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="textPassword"
                android:ellipsize="end"
                android:ems="10"
                android:hint="@string/hint_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bLogin"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:padding="5dp"
            android:paddingBottom="10dp"
            android:text="@string/login_button"
            app:cornerRadius="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>